--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,24 +1,6 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Inter', 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
-}
 body{
-    background-color: rgba(31, 33, 33, 1);
+    font-family: sans-serif;
 }
-:root {
-    --primary-bg-gradient: linear-gradient(135deg, rgba(29, 78, 216, 0.15), rgba(180, 83, 9, 0.15));
-    --hero-padding: 32px;
-    --container-padding: 40px;
-    --text-color: white;
-    --accent-color: #22d3ee; /* blue from gradient */
-    --accent-hover: #2563EB;
-    --subtext-color: rgb(126, 126, 126);
-    --filter-bg: rgba(56, 55, 55, 0.53);
-    --filter-radius: 10px;
-    --filter-padding: 12px 16px;
-    --filter-font-size: 14px;
-    --gap-large: 30px;
-    --gap-medium: 20px;
-}
+*{margin: 0;padding: 0;}
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
